one-manifest.yaml
## mySQL
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: <new-namespace> # Update this with your new namespace
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql

## wordpress and SSL
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: <new-namespace> # Update this with your new namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5-php7.1-apache
          ports:
          - containerPort: 80
            name: wordpress
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-volume

---
kind: Service
apiVersion: v1
metadata:
  name: wordpress
  namespace: <new-namespace> # Update this with your new namespace
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

# ---
# apiVersion: cert-manager.io/v1
# kind: ClusterIssuer # I'm using ClusterIssuer here
# metadata:
#   name: letsencrypt-cluster-issuer
# spec:
#   acme:
#     server: https://acme-v02.api.letsencrypt.org/directory
#     email: smtp.testing.devops@gmail.com
#     privateKeySecretRef:
#       name: letsencrypt-cluster-issuer-key
#     solvers:
#     - http01:
#         ingress:
#           class: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: <new-namespace> # Update this with your new namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    cert-manager.io/renew-before: 360h  # 15 days before expiration
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: <new-domain> # Update this with your new domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
  tls:
  - hosts:
    - <new-domain> # Update this with your new domain
    secretName: nginx-wordpress-tls
